--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -720,29 +720,37 @@
         </div>
         <!-- Arrow -->
         <div class="blankHS"></div>
-        <!-- mid-fiWireframes -->
-        <div class="Grid Grid--full wrapper">
-          <div class="Grid-cell">
-            <div class="element">
-              <img class="modal-target shadowFilter" src="Mid-fi_keyword.svg" alt="Wireframes">
-            </div>
-            <div class="Grid-cell wrapper">
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
               <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_keyword.svg" alt="Wireframes">
               </div>
             </div>
-          </div>
-
-          <div class="Grid-cell">
-            <div class="element">
-              <img class="modal-target shadowFilter" src="Mid-fi_ddashboard.svg" alt="Wireframes">
-            </div>
-            <div class="Grid-cell wrapper">
+            <div class="Grid-cell">
               <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_keyword_dropdown.svg" alt="Wireframes">
               </div>
             </div>
+ 
           </div>
         </div>
-        <!-- mid-fiWireframes -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_keyword_save.svg" alt="Wireframes">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_dashboard.svg" alt="Wireframes">
+              </div>
+            </div>
+ 
+          </div>
+        </div>
+ 
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
@@ -832,6 +840,80 @@
         </div>
         <!-- testing -->
       </section>
+      <section id="solution">
+        <div class="BGseer2_1">
+          <div class="blankHS"></div>
+
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Metrics</p>
+                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+
+
+          <div class="blankHS"></div>
+
+          <!-- Product / Features -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-3">
+              <div class="Grid-cell element">
+                <div class="elementSEER">
+                  <div class="elementInnerSEER heightM">
+                    <img class="iconM" src="icon_Count.svg" alt="icon">
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Post count </strong> </h5>
+                    <ul>
+                      <li> By communities</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell element">
+                <div class="elementSEER">
+                  <div class="elementInnerSEER heightM">
+                    <img class="iconM" src="icon_Upvote.svg" alt="icon">
+
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Upvote ratio </strong> </h5>
+                    <ul>
+                      <li> Time and date</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell element">
+                <div class="elementSEER">
+                  <div class="elementInnerSEER heightM">
+                    <img class="iconM" src="icon_Sentiment.svg" alt="icon">
+
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Sentiment score </strong> </h5>
+                    <ul>
+                      <li> Time and date</li>
+
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Product / Features -->
+          <div class="blankHM"></div>
+
+        </div>
+
+
+      </section>
     </section>
     <div class="blankHS"></div>
     <hr>
@@ -846,7 +928,8 @@
       <div class="Grid Grid--full u-textCenter">
         <div class="Grid-cell">
           <h3 class="element">Key takeaways</h3>
-          <h5>Understand users is important for design, in this dashboard design, understanding the way data works is also very important</h5>
+          <h5>Understand users is important for design, in this dashboard design, understanding the
+            way data works is also very important</h5>
           <h5></h5>
           <h5></h5>
         </div>
