--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -197,8 +197,11 @@
             <li class=""><a href="#wireframes">Wireframes</a></li>
             <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow </a></li>
             <li class=""><a href="#testing">Usability testing </a></li>
+            <li class=""><a href="#midFiUpdate">Wireframe Update</a></li>
+
           </ul>
         </li>
+
         <li><a href="#solution">Final solution </a></li>
         <li><a href="#takeaways">Takeaways </a></li>
       </ol>
@@ -393,7 +396,7 @@
                 <div class="Grid-cell">
                   <div class="element">
 
-                    <img class="" src="RedditTable.svg" alt="Placeholder">
+                    <img class="" src="RedditTable.svg" alt="Reddit Table">
 
                   </div>
                 </div>
@@ -552,44 +555,51 @@
         <!-- Product / Features -->
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--cols-3">
-            <div class="Grid-cell element">
-              <div class="elementSEER">
-                <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_CurrentState.svg" alt="icon">
-                  <div class="blankHXS"></div>
-                  <h5> <strong> Create keywords </strong> </h5>
-                  <ul>
-                    <li> Create keywords</li>
-                    <li> Save keywords </li>
-                  </ul>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementSEER">
+                  <div class="elementInnerSEER heightM">
+                    <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Create keywords </strong> </h5>
+                    <ul>
+                      <li> Create keywords</li>
+                      <li> Save keywords </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+                <div class="elementSEER">
+                  <div class="elementInnerSEER heightM">
+                    <img class="iconM" src="icon_Alert.svg" alt="icon">
+
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Notification </strong> </h5>
+                    <ul>
+                      <li> Keywords notification setting</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="Grid-cell element">
-              <div class="elementSEER">
-                <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_Alert.svg" alt="icon">
-
-                  <div class="blankHXS"></div>
-                  <h5> <strong> Notification </strong> </h5>
-                  <ul>
-                    <li> Keywords notification setting</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="Grid-cell element">
-              <div class="elementSEER">
-                <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_Compare.svg" alt="icon">
-
-                  <div class="blankHXS"></div>
-                  <h5> <strong> Data Comparison </strong> </h5>
-                  <ul>
-                    <li> Save results</li>
-                    <li> Compare result side by side</li>
-
-                  </ul>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementSEER">
+                  <div class="elementInnerSEER heightM">
+                    <img class="iconM" src="icon_Compare.svg" alt="icon">
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Data Comparison </strong> </h5>
+                    <ul>
+                      <li> Save results</li>
+                      <li> Compare result side by side</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
@@ -597,47 +607,51 @@
         </div>
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--cols-3">
-            <div class="Grid-cell element">
-              <div class="elementSEER">
-                <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_Chart.svg" alt="icon">
-                  <div class="blankHXS"></div>
-                  <h5> <strong> Dashboard </strong> </h5>
-                  <ul>
-                    <li> Table - </li>
-                    <li> Pie Charts - </li>
-                    <li>Line Graphs - time and change</li>
-                    <li>Bar Charts</li>
-                  </ul>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementSEER">
+                  <div class="elementInnerSEER heightM">
+                    <img class="iconM" src="icon_Chart.svg" alt="icon">
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Dashboard </strong> </h5>
+                    <ul>
+                      <li> Table - </li>
+                      <li> Pie Charts - </li>
+                      <li>Line Graphs - time and change</li>
+                      <li>Bar Charts</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="Grid-cell element">
-              <div class="elementSEER">
-                <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_Data.svg" alt="icon">
-
-                  <div class="blankHXS"></div>
-                  <h5> <strong>Data explore/drill down </strong> </h5>
-                  <ul>
-                    <li> From overall data view to the details</li>
-                    <li> Filter the data to get more details</li>
-
-                  </ul>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementSEER">
+                  <div class="elementInnerSEER heightM">
+                    <img class="iconM" src="icon_Data.svg" alt="icon">
+                    <div class="blankHXS"></div>
+                    <h5> <strong>Data explore/drill down </strong> </h5>
+                    <ul>
+                      <li> From overall data view to the details</li>
+                      <li> Filter the data to get more details</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="Grid-cell element">
-              <div class="elementSEER">
-                <div class="elementInnerSEER heightM">
-                  <img class="iconM" src="icon_Download.svg" alt="icon">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementSEER">
+                  <div class="elementInnerSEER heightM">
+                    <img class="iconM" src="icon_Download.svg" alt="icon">
 
-                  <div class="blankHXS"></div>
-                  <h5> <strong> Export Data </strong> </h5>
-                  <ul>
-                    <li> Export data share with team</li>
+                    <div class="blankHXS"></div>
+                    <h5> <strong> Export Data </strong> </h5>
+                    <ul>
+                      <li> Export data share with team</li>
 
-                  </ul>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
@@ -729,17 +743,19 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="modal-target shadowFilter" src="Mid-fi_keyword_dropdown.svg" alt="Wireframes">
+                <img class="modal-target shadowFilter" src="Mid-fi_keyword_dropdown.svg"
+                  alt="Wireframes">
               </div>
             </div>
- 
+
           </div>
         </div>
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
-                <img class="modal-target shadowFilter" src="Mid-fi_keyword_save.svg" alt="Wireframes">
+                <img class="modal-target shadowFilter" src="Mid-fi_keyword_save.svg"
+                  alt="Wireframes">
               </div>
             </div>
             <div class="Grid-cell">
@@ -747,10 +763,10 @@
                 <img class="modal-target shadowFilter" src="Mid-fi_dashboard.svg" alt="Wireframes">
               </div>
             </div>
- 
+
           </div>
         </div>
- 
+
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
@@ -840,6 +856,37 @@
         </div>
         <!-- testing -->
       </section>
+      <section id="midFiUpdate" class="">
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Update based on testing</p>
+                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHS"></div>
+        <div class="wrapper">
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_update.svg" alt="Wireframes">
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+      </section>
+
+
+
       <section id="solution">
         <div class="BGseer2_1">
           <div class="blankHS"></div>
@@ -864,43 +911,52 @@
           <!-- Product / Features -->
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--cols-3">
-              <div class="Grid-cell element">
-                <div class="elementSEER">
-                  <div class="elementInnerSEER heightM">
-                    <img class="iconM" src="icon_Count.svg" alt="icon">
-                    <div class="blankHXS"></div>
-                    <h5> <strong> Post count </strong> </h5>
-                    <ul>
-                      <li> By communities</li>
-                    </ul>
+              <div class="Grid-cell">
+                <div class="element">
+
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightM">
+                      <img class="iconM" src="icon_Count.svg" alt="icon">
+                      <div class="blankHXS"></div>
+                      <h5> <strong> Post count </strong> </h5>
+                      <ul>
+                        <li> By communities</li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="Grid-cell element">
-                <div class="elementSEER">
-                  <div class="elementInnerSEER heightM">
-                    <img class="iconM" src="icon_Upvote.svg" alt="icon">
+              <div class="Grid-cell">
+                <div class="element">
 
-                    <div class="blankHXS"></div>
-                    <h5> <strong> Upvote ratio </strong> </h5>
-                    <ul>
-                      <li> Time and date</li>
-                    </ul>
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightM">
+                      <img class="iconM" src="icon_Upvote.svg" alt="icon">
+
+                      <div class="blankHXS"></div>
+                      <h5> <strong> Upvote ratio </strong> </h5>
+                      <ul>
+                        <li> Time and date</li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="Grid-cell element">
-                <div class="elementSEER">
-                  <div class="elementInnerSEER heightM">
-                    <img class="iconM" src="icon_Sentiment.svg" alt="icon">
+              <div class="Grid-cell">
+                <div class="element">
 
-                    <div class="blankHXS"></div>
-                    <h5> <strong> Sentiment score </strong> </h5>
-                    <ul>
-                      <li> Time and date</li>
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightM">
+                      <img class="iconM" src="icon_Sentiment.svg" alt="icon">
+
+                      <div class="blankHXS"></div>
+                      <h5> <strong> Sentiment score </strong> </h5>
+                      <ul>
+                        <li> Time and date</li>
 
 
-                    </ul>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
