--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -345,7 +345,7 @@
             <div class="Grid-cell">
               <div class="element">
 
-                <img class="" src="userJourney.svg" alt="Placeholder">
+                <img class="modal-target " src="userJourney.svg" alt="Placeholder">
 
               </div>
             </div>
@@ -873,13 +873,68 @@
         <!-- Arrow -->
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
                 <img class="modal-target shadowFilter" src="Mid-fi_update.svg" alt="Wireframes">
               </div>
             </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_updateScreen.svg"
+                  alt="Wireframes">
+              </div>
+            </div>
 
+          </div>
+        </div>
+        <div class="blankHS"></div>
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Mid-fi Version 2</p>
+                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHS"></div>
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_v2_drag.svg" alt="Wireframes">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_v2_delete.svg"
+                  alt="Wireframes">
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="blankHS"></div>
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_v2_search.svg" alt="Wireframes">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target shadowFilter" src="Mid-fi_v2_canceltype.svg"
+                  alt="Wireframes">
+              </div>
+            </div>
 
           </div>
         </div>
