--- a/project/seer/index.html
+++ b/project/seer/index.html
@@ -147,11 +147,23 @@
       </div>
     </div>
   </nav>
+
+
   <!-- Working process -->
   <div class="BGseer1">
     <div class="blankMin1080"></div>
+    <div class="blankHS"></div>
 
-    <img src="SeerFull.svg" alt="SEER">
+
+    <!-- hi-fi -->
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+          <img class="" src="Hi-fi_main.svg" alt="Wireframes">
+        </div>
+      </div>
+    </div>
+    <!-- hi-fi -->
 
     <div class="wrapper zTop">
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
@@ -856,7 +868,7 @@
         </div>
         <!-- testing -->
       </section>
-      <section id="midFiUpdate" class="">
+      <section id="midFiUpdate">
         <!-- Arrow -->
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -896,7 +908,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> Mid-fi Version 2</p>
+                  <p class="tArrow"> Mid-fi adding details</p>
                   <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -914,8 +926,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="modal-target shadowFilter" src="Mid-fi_v2_delete.svg"
-                  alt="Wireframes">
+                <img class="modal-target shadowFilter" src="Mid-fi_v2_delete.svg" alt="Wireframes">
               </div>
             </div>
 
@@ -943,8 +954,15 @@
 
 
       <section id="solution">
+        <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+          <div class="Grid-cell">
+            <h1 class="Grid Grid--center"> <span>Final solution</span><img
+                class="moveUpDown widthLogo" src="../../icon/icon_Redesign.svg" alt="Redesign">
+            </h1>
+          </div>
+        </div>
         <div class="BGseer2_1">
-          <div class="blankHS"></div>
+          <div class="blankHM"></div>
 
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -1024,7 +1042,50 @@
         </div>
 
 
+
+        <section id="hifiWireframes" class="BGseer2_1">
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Hi-fi screens</p>
+                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHS"></div>
+          <!-- wireframes -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target" src="Hi-fi_main.svg" alt="Wireframes">
+              </div>
+            </div>
+          </div>
+          <!-- wireframes -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4> Hi-fi screen updating </h4>
+
+
+              </div>
+            </div>
+          </div>
+
+        </section>
+
       </section>
+
+
+
+
+
     </section>
     <div class="blankHS"></div>
     <hr>
