--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="intro">
           <span class="t-me">product designer</span>
           <span class="divider1"></span>
-          <span class="t-me"> problem solver. </span>
+          <span class="t-me"> UI&#47;UX designer</span>
         </div>
         <div class="rowChng">
           <span class="t-me"> based in the &nbsp;</span>
@@ -197,12 +197,12 @@
     </div>
     <div class="t-intro zTop" data-aos="fade-up">
       <p>
-        Passionate about translating complex business requirements into compelling user experiences
-        by improving efficiency and productivity. I believe, the best design comes
-        from the understanding of user needs and the business itself.
+        a <a href="/project/" class="textUnderline">UI&#47;UX</a> designer with an <a
+          href="/project/" class="textUnderline">architectural design </a>background. Passionate
+        about translating complex business requirements into compelling user experiences. 
       </p>
-      <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS.
-        Please visit my <a href="https://github.com/vicky-wyq" class="textIntro"
+      <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS S3.
+        Please visit my <a href="https://github.com/vicky-wyq" class="textUnderline"
           target="_blank">GitHub</a>
         repository for more details.
       </p>
@@ -210,6 +210,80 @@
 
   </div>
   <!--intro-->
+    <!--  -->
+    <div class="wrapper">
+      <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+        <div class="Grid-cell">
+          <div class="element">
+            <div class="Grid">
+              <p class="tArrow">What I have been working on  </p>
+              <img class="se-arrow" src="icon/arrow-se.svg" alt="se-arrow">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="blankHS"></div>
+      <div class="Grid Grid--gutters Grid--cols-3 ">
+        <div class="Grid-cell">
+          <div class="element">
+            <div class="elementInner ShadowBox">
+              <h4 class="allCaps">b2b Web app (SaaS)</h4>
+              <div class="lineHorizS"></div>
+              <div class="blankHXS"></div>
+  
+              <h5> <strong> Solving problems by understand user &#38; product
+                </strong> </h5>
+  
+              <ul>
+                <li> Understand users </li>
+                <li> Understand business &#38; product</li>
+              </ul>
+              <div class="blankHXS"></div>
+  
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <div class="elementInner ShadowBox">
+              <h4 class="allCaps">The way to integrate </h4>
+              <div class="lineHorizS"></div>
+              <div class="blankHXS"></div>
+  
+              <h5> <strong>Simplicity is the key “Less is More” </strong> </h5>
+  
+              <ul>
+                <li> Consider existing user flow</li>
+                <li> Thoughtful placement of design elements, eliminate redundancy </li>
+              </ul>
+              <div class="blankHXS"></div>
+  
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <div class="elementInner ShadowBox">
+              <h4 class="allCaps">The way to built </h4>
+              <div class="lineHorizS"></div>
+              <div class="blankHXS"></div>
+  
+              <h5> <strong> Quality of design &#38; Implement
+                </strong> </h5>
+              <ul>
+                <li> Undersdand design system in Figma</li>
+                <li> Reuse the existing components</li>
+                <li> Standardized grid system</li>
+  
+              </ul>
+              <div class="blankHXS"></div>
+  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--   -->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
@@ -488,6 +562,12 @@
           <h6 class="textItalic"> September 2009 - July 2013</h6>
           <h5>Bachelor of Art </h5>
           <h5> Art & Design / Landscape Design </h5>
+        </div>
+        <div class="element ">
+          <h5> <strong>Google UX Design Professional Certificate </strong> </h5>
+          <h6 class="textItalic"> August 2021 - October 2021</h6>
+          <h5>Google &#124; coursera</h5>
+          <h5> UI &#47; UX Design </h5>
         </div>
       </div>
 
